# statham

./: .bazelrc  .gitignore  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  bazel-statham-password-transporter
agent/: BUILD  Cargo.toml  build.rs
agent/.cargo/: config.toml
agent/src/: helpers_linux.rs  helpers_macos.rs  helpers_windows.rs  main.rs  password_generator.rs
cargo/: BUILD.bazel
hello/: BUILD
server/: BUILD  Cargo.toml  Rocket.toml
server/cargo/: BUILD.bazel
server/migrations/001/: down.sql  up.sql
server/src/: main.rs
server/src/db/: mod.rs
