[package]
name = "statham"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "agent"
path = "agent/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
log = "=0.4.26"
fern = "=0.7.1"
rand = "0.9.0"

[dependencies.rocket]
version = "=0.5.1"

[dependencies.rocket_sync_db_pools]
version = "=0.1.0"
default-features = false
features = ["postgres_pool"]
