[package]
name = "statham"
version = "0.0.1"
edition = "2021"
build = "build.rs"


[package.metadata.winres]
OriginalFilename = "STATHAM_AGENT.EXE"
LegalCopyright = "Copyright Jan Harasym © 2022"
CompanyName = "Jan-Martin Harris-Harasym"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
log = "=0.4.20"
fern = "=0.6.2"
scopeguard = "1.2.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winuser", "lmaccess", "lmapibuf", "minwindef", "winerror", "errhandlingapi"]

[target.'cfg(windows)'.dependencies.widestring]
version = "1.0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.raze]
workspace_path = "//cargo"
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
output_buildfile_suffix = "BUILD.bazel"
gen_workspace_prefix = "vendored_statham_library"
genmode = "Vendored"
package_aliases_dir = "cargo"
default_gen_buildrs = false

[package.metadata.raze.crates.winapi.'*']
gen_buildrs = true